<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itens_tela_chat.TelaChat"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/btn_voltar_TelaChatGrupo"
        style="@style/BotoesPerfil"
        android:layout_margin="10dp"
        android:src="@drawable/ic_seta_esquerda2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_titulo_TelaChatGrupo"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        />

    <TextView
        android:id="@+id/txt_titulo_TelaChatGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_voltar_TelaChatGrupo"
        app:layout_constraintBottom_toBottomOf="@id/btn_voltar_TelaChatGrupo"
        android:text="@string/chat_do_grupo"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_mensagem_recebida1_TelaChatGrupo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_mensagem_recebida1_TelaChatGrupo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/mulher_um"
        />

    <TextView
        android:id="@+id/txt_mensagem_recebida1_TelaChatGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img_mensagem_recebida1_TelaChatGrupo"
        app:layout_constraintBottom_toTopOf="@id/img_mensagem_recebida2_TelaChatGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="textStart"
        android:background="@drawable/container_componentes2"
        android:padding="10dp"
        android:text="@string/chat_grupo_1"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_mensagem_recebida2_TelaChatGrupo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_mensagem_recebida1_TelaChatGrupo"
        app:layout_constraintRight_toLeftOf="@id/txt_mensagem_recebida2_TelaChatGrupo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/homem_dois"
        />

    <TextView
        android:id="@+id/txt_mensagem_recebida2_TelaChatGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_mensagem_recebida1_TelaChatGrupo"
        app:layout_constraintLeft_toRightOf="@id/img_mensagem_recebida2_TelaChatGrupo"
        app:layout_constraintBottom_toTopOf="@id/img_mensagem_recebida3_TelaChatGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="textStart"
        android:background="@drawable/container_componentes2"
        android:padding="10dp"
        android:text="@string/chat_grupo_2"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_mensagem_recebida3_TelaChatGrupo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_mensagem_recebida2_TelaChatGrupo"
        app:layout_constraintRight_toLeftOf="@id/txt_mensagem_recebida3_TelaChatGrupo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/mulher_dois"
        />

    <TextView
        android:id="@+id/txt_mensagem_recebida3_TelaChatGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_mensagem_recebida2_TelaChatGrupo"
        app:layout_constraintLeft_toRightOf="@id/img_mensagem_recebida3_TelaChatGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="textStart"
        android:background="@drawable/container_componentes2"
        android:padding="10dp"
        android:text="@string/chat_grupo_3"
        />

    <TextView
        android:id="@+id/txt_mensagem_enviada_TelaChatGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_mensagem_recebida3_TelaChatGrupo"
        app:layout_constraintEnd_toEndOf="@id/img_mensagem_enviada_TelaChatGrupo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:background="@drawable/container_componentes2"
        android:padding="10dp"
        android:visibility="invisible"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_mensagem_enviada_TelaChatGrupo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_mensagem_recebida3_TelaChatGrupo"
        app:layout_constraintLeft_toRightOf="@id/txt_mensagem_enviada_TelaChatGrupo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        android:src="@drawable/homem_um"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <EditText
        android:id="@+id/edt_mensagem_TelaChatGrupo"
        style="@style/Edit_Text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/digite_sua_mensagem"
        app:layout_constraintVertical_bias="1.0"
        />

    <ImageView
        android:id="@+id/btn_enviar_mensagem_TelaChatGrupo"
        style="@style/BotoesPerfil"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/edt_mensagem_TelaChatGrupo"
        app:layout_constraintTop_toTopOf="@id/edt_mensagem_TelaChatGrupo"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        />

</androidx.constraintlayout.widget.ConstraintLayout>